--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
 
 </head>
 <style>
-h1 {
-  color: white;
-}
-h2 {
-  color: white;
-}
-body {
-background-color: black;
-}
 .button {
   background-color: #4CAF50; /* Green */
   border: none;
@@ -23,12 +14,10 @@ background-color: black;
   display: inline-block;
   font-size: 16px;
 }
-
 </style>
 
 <body>
-<a href="file:///C:/Users/Judy/Desktop/whatever.html" class="button">Light mode</a>
-
+<a href="file:///C:/Users/Judy/Desktop/whatever%20dark%20mode.html" class="button">dark mode</a>
 <h1>welcome bruh</h1>
 <h2> advanced bruhs (upgrade to premium to unlock more of these):
 <iframe width="420" height="345" src="https://www.youtube.com/embed/BwVZ_tPryDc">
@@ -55,8 +44,7 @@ upgrade to bruh premium
 <p>-diamond package</P>
 <p>100$ a month, grants even more bruh sound effects and they have video's to go with them and they have the best quality on earth!</p>
 <p>sure you dont want to upgrade to bruh premium?</p>
-friend me and contact me on discord TheLetterL#6108 or shoot me a tweet at <a href="https://twitter.com/FiZZy__SoDa">my twitter</a>
-<a href="file:///C:/Users/Judy/Desktop/whatever.html" class="button">Light mode</a>
+friend me and contact me on discord TheLetterL#6108 or shoot me a dm at <a href="https://twitter.com/FiZZy__SoDa">my twitter</a>
+<a href="file:///C:/Users/Judy/Desktop/whatever%20dark%20mode.html" class="button">dark mode</a>
 </body>
-
 </html>
